fixed issue with workout name not centered

--- a/src/app/components/workout-day/workout-day.component.scss
+++ b/src/app/components/workout-day/workout-day.component.scss
@@ -4,6 +4,11 @@
 ion-item#workout-day-header {
     --background: var(--ion-color-success);
     --color: var(--ion-color-danger);
+    ion-label {
+        //flex: unset;
+        max-width: unset;
+        width: 100%;
+    }
 }
 ion-list {
     height: var(--workout-day-ion-list-height-vh);
